test/cases/compile_errors/invalid_underscore_placement_in_float_literal-10.zig
fn main() void {
    var bad: f128 = 1.0__0e-1;
    _ = bad;
}

// error
//
// :2:25: error: repeated digit separator
